[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["Bartek Wójcicki <bartwojcicki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.5"
starlette_exporter = "^0.4.1"
sentry-sdk = "^0.16.1"
pytest = "^5.4.3"
requests = "^2.24.0"
black = "^19.10b0"
aioboto3 = "^8.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
